--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECL</title>
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/main.css">
     <script src="https://kit.fontawesome.com/cfe5495c01.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div id="fondo">
 
+        <div id="but" class="active">
+            <i id="arrow" class="fas fa-chevron-right"></i>
+        </div>
+
         <div id="bar" class="active">
 
             <div id="logo">
                 <h1>ECL</h1>
-            </div>
-
-            <div id="but">
-                <i id="arrow" class="active fas fa-chevron-right"></i>
             </div>
 
             <ul id="list">
@@ -30,15 +30,19 @@
 
         </div>
 
-        <div id="cont">
+        <div id="cont" class="active">
 
-            
+            <div id="c1">CONT 1</div>
+            <div id="c2">CONT 2</div>
+            <div id="c3">CONT 3</div>
 
         </div>
 
+        <div id="footer" class="active">F O O T E R</div>
+
     </div>
 
-    <script src="/static/main.js"></script>
+    <script src="/main.js"></script>
 
 </body>
 
